resolve deprecated key window, status bar orientation and status bar frame.

--- a/AHKActionSheetExample/AHKActionSheetExample/AHKActionSheetExample-Info.plist
+++ b/AHKActionSheetExample/AHKActionSheetExample/AHKActionSheetExample-Info.plist
@@ -25,7 +25,7 @@
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
-	<string>Main</string>
+	<string>AHKActionSheet</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
